:skull: Fix share wish social links additional margin on non mobile device

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3554,4 +3554,10 @@ a.btn {
   margin-top: 2rem;
 }
 
+@media (min-width: 576px) {
+  .share-wish .share-wish__social {
+    margin-top: 0;
+  }
+}
+
 /*# sourceMappingURL=style.map.css */
