--- a/src/sass/components/_share-wish.scss
+++ b/src/sass/components/_share-wish.scss
@@ -7,7 +7,12 @@
       color: $gray-900;
     }
   }
+
   .share-wish__social {
     margin-top: $spacer-medium;
+
+    @include respond-to("small-up") {
+      margin-top: 0;
+    }
   }
 }
